--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Images Finder</title>
   </head>
-  <body>
-    <div class="container">
-      <input
-        class="input-search"
-        type="text"
-        placeholder="Enter for search images"
-      />
-      <div class="images-search"></div>
-    </div>
-  </body>
+  <body></body>
 </html>
